# AI-Enabled-Edge-Cloud-Smart-Doorbell-System-for-Hearing-Impaired-Users

./: .gitignore  README.md  app.json  app.py  app.wxss  config.example.py  project.config.json  project.private.config.json  test_email.py
hardware/client/: CMakeLists.txt  HZK16  README.md  gen_hzk.py  partitions.csv
hardware/client/main/: CMakeLists.txt  audio_ai.cpp  buzzer.c  buzzer.h  command_recognition.c  command_recognition.h  door_button.c  esp_now_outdoor.c  esp_now_outdoor.h  event_fusion.c  font_ascii.c  font_ascii.h  font_chinese.c  font_chinese.h  idf_component.yml  light.c  light.h  main.c  mic.c  mic.h  mqtt.c  mqtt.h  oled.c  oled.h  pir.c  utf8_to_gb2312.c  utf8_to_gb2312.h  wifi.c  wifi.h
hardware/server/: CMakeLists.txt
hardware/server/main/: CMakeLists.txt  emergency_button.c  emergency_button.h  esp_now_indoor.c  esp_now_indoor.h  main.c  vibrator.c  vibrator.h
miniapp/: app.json  app.wxss  project.config.json  project.private.config.json
miniapp/pages/email/: email.wxml
miniapp/pages/history/: history.json
miniapp/pages/index/: index.wxml
pages/email/: email.js  email.json  email.wxss
pages/history/: history.js  history.wxml  history.wxss
pages/index/: index.js  index.json  index.wxss
pages/setting/: setting.js  setting.json  setting.wxml  setting.wxss
